sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:7: error: not found: value i
      for (i<-0 to i){
                   ^